new post about event bus

--- a/src/posts/2020/2020-06-16-event-bus.md
+++ b/src/posts/2020/2020-06-16-event-bus.md
@@ -1,16 +1,16 @@
 --- 
-tags: ['draft']
+tags: ['featured', 'patterns']
 title: Building an Event Bus With Vanilla JavaScript
-abstract: The Event Bus is a common pattern to provide central access to general events inside an app or between services. The post describes how to fast implement a working version with just vanilla JavaScript.
+abstract: The Event Bus is a common pattern to provide convenient access to global events inside an app or between services. This post describes how to fast implement a working version with just vanilla JavaScript.
 --- 
 
-The Event Bus is a typical pattern in programming to decouple pieces of an app. It is a central interface to publish and listen to events like logging messages or alerting the user. Some module is able to subscribe to an event without any knowledge of the publisher component and vice-versa. 
+The Event Bus is a typical pattern in programming to decouple pieces of an app. It is a central interface to signal or react to behavior like logging or alerting. Some modules can subscribe to an event without any knowledge of the publisher component and vice-versa. 
 
-This kind of technic is commonly seen in large scales infrastructures to provide integration between different services. But even in small codebases, the Event Bus could be a practical way to provide general services to the whole app. A module may import the central Bus to signal the start of some task and the UI module will automatic triggers a loading screen.
+This kind of technic is commonly seen in large infrastructures as a way to provide integration between services. But even in small codebases, the Event Bus could be a practical way to provide features of general use to the whole app. A module may import the central Bus to signal the start of some task, and some other module would automatically trigger a UI loading screen.
 
 ## Building an Event Bus
 
-A viable version could be achieved very fast. Let's start that by implementing a `subscribe` function that feeds a `Map` of subscriptions. A subscription will be an array of observers functions to be called when some specific event type (also know as topic) is published.
+A viable version could be achieved very fast. Let's start that by implementing a `subscribe` function that feeds a `Map` of subscriptions. A subscription by itself will be an array of observers functions to be called when some specific event type (also known as a topic) is published.
 
 ``` js
 // event-bus.js
@@ -27,7 +27,7 @@ function subscribe (topic, observer) {
 export { subscribe }
 ```
 
-Then, we implement the `publish` function to invoke all the observer functions associated to a topic passing some arbitrary parameter. 
+Then, we implement the `publish` function to invoke all the observer functions associated with a topic, passing some arbitrary parameter. 
 
 ``` js
 // event-bus.js
@@ -43,7 +43,7 @@ function publish (topic, payload) {
 export { subscribe, publish }
 ```
 
-Other modules became able to import subscribe and publish to take advantage of our Event Bus. 
+Now, other modules became able to import `subscribe` and `publish` to take advantage of our Event Bus. 
 
 ``` js
 // subscriber.js
@@ -58,7 +58,7 @@ publish('SOME_EVENT', 'hi');
 
 ## Improvements and Tradeoffs
 
-That's it, we have an app with a working Event Bus. That might be improved to offer additional features as needed. For example, with two lines of code `subscribe` could return an unsubscribe function. When called, unsubscribe removes the corresponding observer from that subscription.
+That's it, we have an app with a working Event Bus. That might be improved to offer additional features as needed. For example, with two lines of code, `subscribe` could return an unsubscribe function. When called, unsubscribe removes the observer from the respective topic's subscription.
 
 ``` js
 function subscribe (topic, observer) {
@@ -73,7 +73,7 @@ function subscribe (topic, observer) {
 }
 ```
 
-Now someone is able to do something like this:
+Now someone can remove itself from listening like this:
 
 ``` js
 // subscriber.js
@@ -86,11 +86,10 @@ import { publish } from './event-bus';
 publish('SOME_EVENT', 'hi'); // nothing will be printed 
 ```
 
-Others improvements are available. There was no code to deal with exceptions in observers or maybe we could add the ability to an observer be called immediately after subscribing with the last published payload.
+Other improvements are available. There was no code to deal with exceptions in observers, or maybe we could add the ability to an observer be called immediately after subscribing with the last published payload.
 
-But probably is best to consider some proven library if you want something sophisticated. For example, I made for myself a [package](https://github.com/joaomelo/bus) with that ability to immediately call after subscription. But the golden standard for event utilities is [Rxjs](https://rxjs-dev.firebaseapp.com/). The library `Subject` class is a perfect candidate to build Event Buses.
+But probably it is best to consider some proven library if you want something sophisticated. For example, I made a [package](https://github.com/joaomelo/bus) with the beforementioned ability to immediately be called after subscription. But the gold standard for event utilities is [Rxjs](https://rxjs-dev.firebaseapp.com/). The library's `Subject` class is an excellent candidate to build Event Buses.
 
-Nevertheless, is relevant to note that the solution is not free of tradeoffs. Because of its potential to be used everywhere, a failing one would be disastrous for an app. Other issue is that as complexity and signal rate rises, the Event Bus could become a performance challenge.
+Nevertheless, it is relevant to note that the solution is not free of tradeoffs. Because of its potential to be used everywhere, a failing one would be disastrous for an app. Another issue is that as complexity and signal rate rises, the Event Bus could become a performance challenge.
 
-That's it. I leave you with my best regards.
-
+That's it, friends. I leave you with my best regards 🤗.
