--- a/src/posts/2020/2020-06-16-event-bus.md
+++ b/src/posts/2020/2020-06-16-event-bus.md
@@ -1,5 +1,5 @@
 --- 
-tags: ['featured', 'patterns']
+tags: ['featured', 'patterns', 'reactivity']
 title: Building an Event Bus With Vanilla JavaScript
 abstract: The Event Bus is a common pattern to provide convenient access to global events inside an app or between services. This post describes how to fast implement a working version with just vanilla JavaScript.
 --- 
